# soma-mcp

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
docs/: README.md  architecture.md  auth.md  compliance.md  examples.md  positioning.md  security.md  specification.md  tools.md
src/soma_mcp/: __init__.py  engine.py  guard.py  kernel.py  server.py
tests/: test_kernel.py
